# software_render

./: .gitignore  CMakeLists.txt  GdIDeviceContext.cpp  GdiDeviceContext.h  IDeviceContext.h  MainFrm.cpp  MainFrm.h  MemDC.h  Render.cpp  Render.h  Render.rc  Render.sln  Render.vcxproj  Render.vcxproj.filters  RenderDoc.cpp  RenderDoc.h  RenderView.cpp  RenderView.h  resource.h  stdafx.h
Backup/: Render.sln
RenderLib/: CMakeLists.txt  IDeviceContext.h  IPropertyMap.h  ISceneRender.h  RenderLib.cpp  RenderLib.h  RenderLib.vcxproj  RenderLib.vcxproj.filters  stdafx.h
RenderLib/geometry/: IGeoSolid.h  SolidCylinder.cpp  SolidDodecahedron.cpp  SolidDodecahedron.h  SolidSphere.h  SolidTorus.cpp
RenderLib/math/: Face.h  MathUtils.h  Matrix.h  MatrixUtil.cpp  MatrixUtil.h  Vector.h
RenderLib/pipeline/: Color.h  RenderEngine.cpp  RenderEngine.h
RenderLib/pipeline/light/: GouraudLight.cpp  ILightDirection.h  ILightEngine.h  LambertLight.cpp  PhongLight.cpp
RenderLib/pipeline/rasterizer/: DrawTriangle.cpp  DrawTriangle.h  GradientRasterizer.cpp  IRasterizer.h  InterpolationRender.h  PixelRasterizer.cpp  WireFrameRasterizer.cpp  WireFrameRasterizer.h
RenderLib/pipeline/texture/: Array2D.h  ITextureSource.h  TextureFileSource.cpp  TextureFileSource.h
RenderLib/scene/: PropertyUtils.h  SceneRender.cpp  SceneRender.h  SceneSolid.cpp  SceneSolid.h
RenderLinux/: CMakeLists.txt  PropertyMapImpl.cpp  PropertyMapImpl.h  RenderLinux.cpp  RenderLinux.h  XDeviceContext.cpp  XDeviceContext.h
RenderWinApp/: GdIDeviceContext.cpp  GdiDeviceContext.h  Render.cpp  Render.rc  Render.vcxproj  Render.vcxproj.filters  RenderView.cpp  RenderView.h  resource.h  stdafx.cpp  stdafx.h
RenderWinApp/settings/: GuiPropertyBag.cpp  GuiPropertyBag.h  PropertyMapImpl.cpp  PropertyMapImpl.h
geometry/: IGeoSolid.h  SolidCylinder.cpp  SolidCylinder.h  SolidDodecahedron.cpp  SolidDodecahedron.h  SolidSphere.cpp  SolidSphere.h  SolidTorus.cpp  SolidTorus.h
math/: Face.h  MATRIX.CPP  MATRIX.H  MatrixUtil.cpp  MatrixUtil.h  VECTOR.CPP  VECTOR.H
pipeline/: IDeviceContext.h  RenderEngine.cpp  RenderEngine.h
pipeline/light/: GouraudLight.cpp  GouraudLight.h  ILightDirection.cpp  ILightDirection.h  ILightEngine.h  LambertLight.cpp  LambertLight.h  PhongLight.cpp  PhongLight.h
pipeline/rasterizer/: DrawTriangle.cpp  DrawTriangle.h  GradientRasterizer.cpp  GradientRasterizer.h  (+7 more)
res/: Render.manifest  Render.rc2
scene/: SceneRender.cpp  SceneRender.h  SceneSolid.cpp  SceneSolid.h
settings/: ColorStatic.cpp  ColorStatic.h  GuiPropertyBag.cpp  GuiPropertyBag.h  IPropertyMap.cpp  IPropertyMap.h  PropertyMapImpl.cpp  PropertyMapImpl.h
(+18 files in other folders)
